@@ -356,16 +356,12 @@ are drawn with the first specified one on top (closest to the user)
 and each subsequent image behind the previous one.
 Where:
 
-<pre class=prod><var><dfn>&lt;mask-image&gt;</dfn></var> = [<var>&lt;image&gt;</var> | none] [ alpha | luminance ]?</pre>
+<pre class=prod><var><dfn>&lt;mask-image&gt;</dfn></var> = [<var>&lt;image&gt;</var> [ alpha | luminance ]? ] | none</pre>
 
 <dl>
   <dt><dfn>&lt;image&gt;</dfn></dt>
   <dd>
     A 2D image. (See [[!CSS3-IMAGES]].)
-  </dd>
-  <dt><dfn>''none''</dfn></dt>
-  <dd>
-    A value of ''none'' counts as an image layer but does not mask the element.
   </dd>
   <dt><dfn>''alpha''</dfn></dt>
   <dd>
@@ -378,6 +374,10 @@ Where:
     A value of ''luminance'' indicates that the luminance values of the mask
     image should be used as the mask values.
     See <a href="#MaskValues">Calculating mask values</a>.</p>
+  </dd>
+  <dt><dfn>''none''</dfn></dt>
+  <dd>
+    A value of ''none'' counts as an image layer but does not mask the element.
   </dd>
 </dl>
 
