@@ -614,18 +614,13 @@ mask-repeat: no-repeat<strong>, no-repeat, no-repeat</strong>;
 
   <pre class=prod><var><dfn
    id=ltmask-imagegt>&lt;mask-image&gt;</dfn></var> = [<a
-   href="#ltimagegt"><var>&lt;image&gt;</var></a> | none] [ alpha | luminance ]?</pre>
+   href="#ltimagegt"><var>&lt;image&gt;</var></a> [ alpha | luminance ]? ] | none</pre>
 
   <dl>
    <dt><dfn id=ltimagegt>&lt;image&gt;</dfn>
 
    <dd> A 2D image. (See <a href="#CSS3-IMAGES"
     rel=biblioentry>[CSS3-IMAGES]<!--{{!CSS3-IMAGES}}--></a>.)
-
-   <dt><dfn id=none>‘<code class=css>none</code>’</dfn>
-
-   <dd> A value of ‘<a href="#none"><code class=css>none</code></a>’
-    counts as an image layer but does not mask the element.
 
    <dt><dfn id=alpha>‘<code class=css>alpha</code>’</dfn>
 
@@ -639,6 +634,11 @@ mask-repeat: no-repeat<strong>, no-repeat, no-repeat</strong>;
     class=css>luminance</code></a>’ indicates that the luminance values of
     the mask image should be used as the mask values. See <a
     href="#MaskValues">Calculating mask values</a>.
+
+   <dt><dfn id=none>‘<code class=css>none</code>’</dfn>
+
+   <dd> A value of ‘<a href="#none"><code class=css>none</code></a>’
+    counts as an image layer but does not mask the element.
   </dl>
 
   <p> If neither ‘<a href="#luminance0"><code
