@@ -4,6 +4,7 @@
 	Fix some typos / grammar.
 	Fix some linking issues.
 	Add Brian as author.
+	Disallow 'mask-image: none alpha'
 
 2012-09-19 dschulze@adobe.com
 	Fxed typos.
